--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/{{ site.favicon }}" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
@@ -27,8 +28,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/">首页</a>
+            <a href="{{ site.baseurl }}/about">关于</a>
           </nav>
         </header>
       </div>
