--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">首页</a>
-            <a href="{{ site.baseurl }}/about">关于</a>
+            <a href="{{ site.baseurl }}/">Home</a>
+            <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
       </div>
